--- a/ziyong.config
+++ b/ziyong.config
@@ -4702,6 +4702,7 @@ CONFIG_PACKAGE_luci-app-upnp=y
 #
 # 4. Themes
 #
+CONFIG_PACKAGE_luci-theme-bakargon=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 # CONFIG_PACKAGE_luci-theme-material is not set
 # CONFIG_PACKAGE_luci-theme-netgear is not set
