--- a/ziyong.config
+++ b/ziyong.config
@@ -4558,6 +4558,7 @@ CONFIG_PACKAGE_luci-app-diskman_INCLUDE_btrfs_progs=y
 CONFIG_PACKAGE_luci-app-diskman_INCLUDE_lsblk=y
 # CONFIG_PACKAGE_luci-app-diskman_INCLUDE_mdadm is not set
 # CONFIG_PACKAGE_luci-app-dnscrypt-proxy is not set
+# CONFIG_PACKAGE_luci-app-dnsfilter is not set
 # CONFIG_PACKAGE_luci-app-dnsforwarder is not set
 CONFIG_PACKAGE_luci-app-docker=y
 # CONFIG_PACKAGE_luci-app-dump1090 is not set
@@ -4704,7 +4705,6 @@ CONFIG_PACKAGE_luci-app-upnp=y
 #
 # 4. Themes
 #
-CONFIG_PACKAGE_luci-theme-bakargon=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 # CONFIG_PACKAGE_luci-theme-material is not set
 # CONFIG_PACKAGE_luci-theme-netgear is not set
