--- a/ziyong.config
+++ b/ziyong.config
@@ -6761,7 +6761,7 @@ CONFIG_PACKAGE_smartmontools=y
 # CONFIG_PACKAGE_spi-tools is not set
 # CONFIG_PACKAGE_spidev-test is not set
 # CONFIG_PACKAGE_ssdeep is not set
-# CONFIG_PACKAGE_sshpass is not set
+CONFIG_PACKAGE_sshpass=y
 # CONFIG_PACKAGE_strace is not set
 CONFIG_STRACE_NONE=y
 # CONFIG_STRACE_LIBDW is not set
