--- a/ziyong.config
+++ b/ziyong.config
@@ -4688,8 +4688,8 @@ CONFIG_PACKAGE_luci-app-turboacc=y
 CONFIG_PACKAGE_TURBOACC_INCLUDE_OFFLOADING=y
 # CONFIG_PACKAGE_TURBOACC_INCLUDE_SHORTCUT_FE is not set
 CONFIG_PACKAGE_TURBOACC_INCLUDE_BBR_CCA=y
-CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSFORWARDER=y
-CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSPROXY=y
+# CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSFORWARDER is not set
+# CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSPROXY is not set
 # CONFIG_PACKAGE_luci-app-udpxy is not set
 # CONFIG_PACKAGE_luci-app-uhttpd is not set
 # CONFIG_PACKAGE_luci-app-unblockmusic is not set
