--- a/Self use.yml
+++ b/Self use.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: ARMv8(Self use)
+name: Self use
 
 on:
   repository_dispatch:
@@ -25,7 +25,7 @@ env:
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: ARMv8(Self use).config
   DIY_P1_SH: diy-part1.sh
-  DIY_P2_SH: diy-ARMv8(Self use).sh
+  DIY_P2_SH: diy-Self use.sh
   UPLOAD_BIN_DIR: true
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: false
